--- a/ps/index.html
+++ b/ps/index.html
@@ -30,11 +30,11 @@
     <div class="black">
       <div>
         <div class="question">
-          <h1>TUDO PRONTO! DESCUBRA AGORA O TRUQUE DA VITAMINA DE 6 INGREDIENTES</h1>
-          <p>QUERO VER O VÍDEO EXPLICANDO</p>
+          <h1>TUDO PRONTO! DESCUBRA AGORA O TRUQUE DA VITAMINA DE 6 INGREDIES</h1>
+          <p>Clique no botão abaixo para continuar</p>
         </div>
         <div class="answer">
-          <a class="btn" href="https://protocolzerobarriga.digital/">CONTINUAR</a>
+          <a class="btn" href="https://protocolzerobarriga.digital/">QUERO VER O VÍDEO EXPLICANDO</a>
         </div>
       </div>    
     </div>
